# samchatint

./: .env.test  .env.test.example  .gitignore  AGENTS.md  CRITICAL_ISSUES_FIXED.md  CRITICAL_WORK_COMPLETION_SUMMARY.md  ENHANCED_PRODUCTION_READINESS_AGENTS.md  INTEGRATION_PLANS_SUMMARY.md  PHASE_2_TEST_RESULTS.md  PRODUCTION_READINESS_PROGRESS.md  PRODUCTION_READINESS_SCORECARD.md  README.md  TEST_INFRASTRUCTURE_REQUIREMENTS.md  UPDATE_REPORT_20251110.md  ZAUBERN_MEMORY_AGENT_INTEGRATION_PLAN.md  copa_telmex_dashboard.py  docker-compose.test.yml  fast_multi_player_bot.py  microsoft_ocr.py  multi_player_ocr_bot.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements-runtime.txt  requirements-test.txt  requirements.txt  roster_ocr_robot_v2_optional_curp.py  run_production_readiness_assessment.py  setup_azure_ocr.sh  telegram_ocr_claude.py  telegram_ocr_qa_bot.py  telegram_roster_ocr_bot.py  test_claude_connection.py
.github/workflows/: assistant-scoped-gate.yml  test.yml
artifacts/: rqf-samchat-assistant-007d-health-stable-readonly-runtime-soak.md  rqf-samchat-service-stability-002-healthcheck-hardening.md
artifacts/analyst_workbench/: RQF_ANALYST_WORKBENCH_001_005_CLOSEOUT.md  RQF_ANALYST_WORKBENCH_001_AUDIT.md
artifacts/deployment/: SAMCHAT_LIVE_RUNTIME_SOURCE_OF_TRUTH.md
artifacts/file_intelligence/: RQF_FILE_INTELLIGENCE_001_006_AUDIT.md  RQF_FILE_INTELLIGENCE_001_006_CLOSEOUT.md  RQF_FILE_INTELLIGENCE_001_025_PR_PACK_V2.md  RQF_FILE_INTELLIGENCE_007_E2E_UPLOAD_VERIFICATION.md  RQF_FILE_INTELLIGENCE_008_012_CONFIRMATION_EXECUTION_GATE.md  RQF_FILE_INTELLIGENCE_013_017_CONVERSATION_CONFIRMATION_LOOP.md  RQF_FILE_INTELLIGENCE_018_022_LIVE_ASSISTANT_WIRING.md  RQF_FILE_INTELLIGENCE_018_LIVE_WIRING_AUDIT.md  RQF_FILE_INTELLIGENCE_023_025_RUNTIME_SMOKE_AND_PROVIDER_ISOLATION.md  RQF_FILE_INTELLIGENCE_029B_BASE_DISCOVERY.md  RQF_FILE_INTELLIGENCE_030_CLEAN_APPLY_V2_AND_COMMIT.md  RQF_FILE_INTELLIGENCE_PREEXISTING_STATUS.md  rqf_file_intelligence_001_025_owned_files_v2.list
artifacts/finance_query/: RQF_FINANCE_QUERY_001_005_DETERMINISTIC_READ_ONLY_COMPARISON.md
config/: copa_telmex.yaml  layout_ctt_2026.json
docs/: README.md  ctt-registration-shadow-rollout.md  install_matrix.md  runtime_map.md
docs/api/: API_QUICK_REFERENCE.md  (+4 more)
scripts/: check_runtime_packaging_consistency.py  monitor_samchat_health.py  pytestw  run_ctt_canary.py  run_registration_intake_bot.py  tech_check.py
templates/: base.html  home.html  players.html  registration_review_detail.html  registration_review_list.html  registration_review_new.html  team_detail.html  teams.html  tournament_selector.html
(+399 files in other folders)
